--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.4.5'
+    id 'org.springframework.boot' version '2.1.10.RELEASE'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
@@ -10,9 +10,27 @@ sourceCompatibility = '1.8'
 
 repositories {
     mavenCentral()
+    maven {
+        url "http://maven.aliyun.com/nexus/content/groups/public/"
+    }
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
 }
-
+def spring_version = "5.2.9.RELEASE"
+List spring = [
+        "org.springframework:spring-core:$spring_version",
+        "org.springframework:spring-beans:$spring_version",
+        "org.springframework:spring-context:$spring_version",
+        "org.springframework:spring-tx:$spring_version",
+]
 dependencies {
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile ('org.fisco-bcos.java-sdk:fisco-bcos-java-sdk:2.7.2')
+            {
+//        exclude group: 'org.springframework.boot', module:'spring-boot-starter-logging'
+                exclude group: 'org.slf4j', module:'slf4j-log4j12'
+                exclude group: 'ch.qos.logback',module:'logback-classic'
+            }
+    compile spring
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     runtimeOnly 'mysql:mysql-connector-java'
