--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.1.10.RELEASE'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+//    id 'war'
 }
 
 group = 'com.example'
@@ -23,6 +24,7 @@ List spring = [
         "org.springframework:spring-tx:$spring_version",
 ]
 dependencies {
+    implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile ('org.fisco-bcos.java-sdk:fisco-bcos-java-sdk:2.7.2')
             {
@@ -38,13 +40,15 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-data-rest'
     //druid
-    implementation 'com.alibaba:druid-spring-boot-starter:1.1.10'
-    runtimeOnly 'org.postgresql:postgresql'
+//    implementation 'com.alibaba:druid-spring-boot-starter:1.1.10'
+//    runtimeOnly 'org.postgresql:postgresql'
 }
 
 test {
     useJUnitPlatform()
 }
+
+
 
 
 
