--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,25 +1,11 @@
 server:
   port: 8080
 
-#spring:
-#  # datasource 数据源配置内容
-#  datasource:
-#    url: jdbc:mysql://localhost:3306/demo?serverTimezone=UTC
-#    driver-class-name: com.mysql.jdbc.Driver
-#    username: root
-#    password: 1234
-#  # JPA 配置内容，对应 JpaProperties 类
-#  jpa:
-#    show-sql: true # 打印 SQL 。生产环境，建议关闭
-#    # Hibernate 配置内容，对应 HibernateProperties 类
-#    hibernate:
-#      ddl-auto: none
-
 spring:
   # datasource 数据源配置内容
   datasource:
-    url: jdbc:mysql://10.20.0.57:3306/blockchain?serverTimezone=UTC
-    driver-class-name: com.mysql.jdbc.Driver 
+    url: jdbc:mysql://localhost:3306/blockchain
+    driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: 1234
   # JPA 配置内容，对应 JpaProperties 类
