--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 server:
-  port: 8080
-
+  port: 4568
+  address: 0.0.0.0
 spring:
   # datasource 数据源配置内容
   datasource:
-    url: jdbc:mysql://localhost:3306/blockchain
+    url: jdbc:mysql://10.20.0.57:3306/blockchain?serverTimezone=GMT&useSSL=false
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: 1234
@@ -13,7 +13,8 @@ spring:
     show-sql: true # 打印 SQL 。生产环境，建议关闭
     # Hibernate 配置内容，对应 HibernateProperties 类
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
+      database-platform: org.hibernate.dialect.MySQLDialect
 
 #server:
 #  port: 4567
