--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
   # datasource 数据源配置内容
   datasource:
     url: jdbc:mysql://10.20.0.57:3306/blockchain?serverTimezone=GMT&useSSL=false
+#    url: jdbc:mysql://localhost:3306/demo?serverTimezone=GMT&useSSL=false
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: 1234
